--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="https://ikewai.github.io/micro-db-deployment/" />
+    <!-- <base href="https://ikewai.github.io/micro-db-deployment/" /> -->
+    <base href="https://chazkondo.github.io/ikewai-micro-ui/" />
     <title>Ike Wai Microbial Dataset</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,5 +17,5 @@
 <link rel="stylesheet" href="styles.5151de26ee5bc659538e.css"></head>
 <body>
     <app>Loading...</app>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.6744963f067d520d5f51.js"></script><script type="text/javascript" src="scripts.54caefbd53f167ac341c.js"></script><script type="text/javascript" src="main.bf407ee32e3e14b782ef.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.6744963f067d520d5f51.js"></script><script type="text/javascript" src="scripts.54caefbd53f167ac341c.js"></script><script type="text/javascript" src="main.899193547765ccffc3e9.js"></script></body>
 </html>
